[package]
name = "nu_plugin_hebuni"
version = "0.110.0"
edition = "2021"

[dependencies]
# Match your 0.110.0 environment exactly
nu-plugin = "0.110.0"
nu-protocol = "0.110.0"

# The Scalar Charter Toolkit
unicode-segmentation = "1.10.1"
unicode-normalization = "0.1.22"
serde = { version = "1.0", features = ["derive"] }

# THE FIX: Explicitly pin to 2.2.1 to resolve the E0432 import error
interprocess = "=2.2.1"

